croatia-configuration-main@63efa42c087/overlays/primary/redis-authorization-policy.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: redis-rules-internal
  namespace: redis
spec:
  action: ALLOW
  rules:
    - from:
        - source:
            namespaces: ["redis"]
      to:
        - operation:
            ports: ["26379", "6379", "6380", "9121"]
---
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: redis-rules-external
  namespace: redis
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: redis
  action: ALLOW
  rules:
    - from:
        - source:
            namespaces: ["alpha"]
      to:
        - operation:
            ports: ["6379","6380"]
